# OneText

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: release.yml
assets/: License.txt
installer/: onetext.iss
src/: main.rs  settings.rs
src/editor/: fps.rs  history.rs  mod.rs  pdf.rs  types.rs
src/workspace/: file_ops.rs  menu.rs  mod.rs
