[package]
name = "onetext"
version = "0.1.4"
edition = "2021"

[dependencies]
# GUI Engine & UI Framework
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

# Data & Logic
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# System Integration
rfd = "0.17"
directories = "6.0"

# Printing
krilla = "0.6"
chrono = "0.4.43"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
